Bug 162370 - Saving a particular document with too many styles to DOCX crashes
Summary: Saving a particular document with too many styles to DOCX crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.1 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Styles
  Show dependency treegraph
 
Reported: 2024-08-06 12:26 UTC by Mike Kaganski
Modified: 2024-10-04 13:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A document with thousands of styles (58.09 KB, application/vnd.oasis.opendocument.text)
2024-08-06 12:26 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-08-06 12:26:01 UTC
Created attachment 195735 [details]
A document with thousands of styles

Open the attached document in Writer, and save as DOCX.

Since commit a2a08463e0299d514e6e555ae61c68bb0e4348d0, it crashes.
Comment 1 Mike Kaganski 2024-08-06 12:42:33 UTC
https://gerrit.libreoffice.org/c/core/+/171547
Comment 2 Commit Notification 2024-08-06 16:28:40 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ad24ca100f0785f1ff638a2e06e72784bf3c4151

tdf#162370: check if nNext is valid, too

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-08-20 06:00:18 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/0d3365ea702f0f9122e6d0e6a89d47ba48917fe2

tdf#162370: check if nNext is valid, too

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-08-20 08:10:41 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/5b5e778f476b91a5647946e8c62204f8e6849e98

tdf#162370: check if nNext is valid, too

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-08-30 13:38:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-6":

https://git.libreoffice.org/core/commit/bdb12080293dceca64c318549deea59a4613963e

tdf#162370: check if nNext is valid, too

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.