tdf#162370: check if nNext is valid, too

0xfff is a special value for a style slot on MS formats export: see
MSWordStyles::GetSlot and BuildGetSlot. The slot in nNext must be
checked the same way as nBase and nLink around it.

Change-Id: I94836bc3f624eb99655e005217707e0ea7210c8c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171547
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit ad24ca100f0785f1ff638a2e06e72784bf3c4151)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172002
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>