sw/qa/extras/ooxmlexport/ooxmlexport21.cxx
@@ -836,6 +836,13 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf161509)
                 u"Plain Text"_ustr);
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf162370)
+{
+    // This must not crash on save; without the fix, it would fail with
+    // "Assertion failed: vector subscript out of range"
+    loadAndSave("too_many_styles.odt");
+}
+
 } // end of anonymous namespace
 CPPUNIT_PLUGIN_IMPLEMENT();
 
